test/corpus/test.txt
=================
terminal (string)
=================

name: "foo"

-----------------

(source_file
	(production_definition
		name: (identifier)
		(body
			(string))))

=================
terminal (regexp)
=================

name: /foo/

-----------------

(source_file
	(production_definition
		name: (identifier)
		(body
			(regexp))))

=========================
non terminal (identifier)
=========================

name: foo

-------------------------

(source_file
	(production_definition
		name: (identifier)
		(body
			(identifier))))

=========================
non terminal (reference)
=========================

name: $foo

-------------------------

(source_file
	(production_definition
		name: (identifier)
		(body
			(identifier))))
